delete_local_sbt